k8s/platform/ingress/overlays/dev/traefik-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: traefik-lb
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
