k8s/platform/ingress/overlays/dev/traefik-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  hostnames:
    - tma.com

  parentRefs:
    - name: traefik-pgw
      sectionName: https-ui

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

        - path:
            type: PathPrefix
            value: /dashboard

      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
